# app/app.py
@@ -1,11 +1,11 @@
 import os
-from flask import Flask, jsonify
-import pymongo
+from flask import Flask, jsonify, request
 from pymongo import MongoClient
 from flask_swagger_ui import get_swaggerui_blueprint
 
 app = Flask(__name__)
 
+# Swagger UI initilization
 SWAGGER_URL="/apidoc"
 API_URL="/static/swagger.json"
 swagger_ui_blueprint = get_swaggerui_blueprint(
@@ -21,16 +21,15 @@ def get_db():
     client = MongoClient(host=os.environ['MONGODB_HOSTNAME'],
                         port=int(os.environ['MONGODB_PORT']), 
                         username=os.environ['MONGODB_USERNAME'], 
-                        password=os.environ['MONGODB_USERNAME'],
+                        password=os.environ['MONGODB_PASSWORD'],
                         authSource="admin")
     db = client[os.environ['MONGODB_DATABASE']]
-
     return db
 
-# server status
+# Server Status
 @app.route('/ping')
 def ping_server():
-    return 'pong'
+    return jsonify({"status": "pong"})
 
 # Returns a list of all users.
 @app.route('/users', methods=['Get'])
@@ -45,12 +44,14 @@ def get_user_id(id):
 # Creates a new user with the specified data.
 @app.route('/users', methods=['POST'])
 def create_user():
-    return 'User created'
+    data = request.json
+    return 'User created ' + str(data['id'])
 
 # Updates the user with the specified ID with the new data.
 @app.route('/users/<id>', methods=['PUT'])
 def update_user(id):
-    return 'User updated ' + id
+    data = request.json
+    return 'User updated ' + str(data)
 
 # Updates the user with the specified ID with the new data.
 @app.route('/users/<id>', methods=['DELETE'])
